Adding the username@hostname in the starship config file

--- a/starship.toml
+++ b/starship.toml
@@ -1,12 +1,24 @@
-[line_break]
-disabled=true
+#[line_break]
+#disabled=true
 
 [character]
 error_symbol = "[✗](bold red) "
 
-
 [directory]
 truncation_length = 100
 truncate_to_repo = false
-style = "bold green"
-format = "[$path]($style)[$read_only]($read_only_style) "
+style = "bold blue"
+format = "in [$path]($style)[$read_only]($read_only_style) "
+
+[username]
+style_user = "yellow bold"
+style_root = "black bold"
+format = "[$user]($style) "
+disabled = false
+show_always = true
+
+[hostname]
+ssh_only = false
+format =  "at [$hostname](bold red) "
+trim_at = ".companyname.com"
+disabled = false
