--- a/starship.toml
+++ b/starship.toml
@@ -2,16 +2,18 @@
 #disabled=true
 
 [character]
-error_symbol = "[✗](bold red) "
+error_symbol = "[ ✗ ](bold bright-red) "
+vicmd_symbol = "[ ❮ ](bold bright-cyan)"
+success_symbol="[ ❯ ](bold bright-green)"
 
 [directory]
 truncation_length = 100
 truncate_to_repo = false
-style = "bold blue"
+style = "bold bright-blue"
 format = "in [$path]($style)[$read_only]($read_only_style) "
 
 [username]
-style_user = "yellow bold"
+style_user = "bright-yellow bold"
 style_root = "black bold"
 format = "[$user]($style) "
 disabled = false
@@ -19,6 +21,6 @@ show_always = true
 
 [hostname]
 ssh_only = false
-format =  "at [$hostname](bold red) "
+format =  "at [$hostname](bold bright-red) "
 trim_at = ".companyname.com"
 disabled = false
